--- a/terms.html
+++ b/terms.html
@@ -115,4 +115,94 @@
 
     <section class="card" id="license">
       <h2>4) License to Use the App</h2>
-      <p>Subject to these Terms, we grant you a limited, personal, non‑exclusive, non‑transferable, revocable lice
+      <p>Subject to these Terms, we grant you a limited, personal, non‑exclusive, non‑transferable, revocable license to install and use the App for your own non‑commercial purpose on a device you own or control. Any commercial use (e.g., operating a paid photo booth or service) requires our prior written consent.</p>
+    </section>
+
+    <section class="card" id="user-content">
+      <h2>5) Your Content</h2>
+      <p>You retain ownership of photos and other content you input into the App. You are solely responsible for obtaining any permissions needed to use images of other people and for complying with applicable laws. If you choose to share content with us (e.g., by email for support), you grant us a limited license to use that content solely to provide support and improve functionality.</p>
+    </section>
+
+    <section class="card" id="free-paid">
+      <h2>6) Free &amp; Rewarded Features; Paid Features</h2>
+      <h3>Free features &amp; ads</h3>
+      <p>Some features are free and supported by advertising (e.g., Google AdMob). You may see banners, interstitials, or rewarded ads. Rewarded ads can temporarily unlock certain features or remove limits for the current session or image.</p>
+      <h3>Paid features (if offered)</h3>
+      <p>We may offer optional paid upgrades (one‑time purchase or subscriptions) via your app store. Prices may change prospectively. Refunds, if any, are handled under the store’s policies or as required by law. Attempts to bypass payment or reward logic are prohibited.</p>
+    </section>
+
+    <section class="card" id="responsibilities">
+      <h2>7) Your Responsibilities &amp; Safety</h2>
+      <ul>
+        <li>Use the App safely; do not use it while driving or operating machinery.</li>
+        <li>Comply with applicable laws and photo standards in your country.</li>
+        <li>If using images of others, obtain appropriate permissions.</li>
+        <li>Parents/guardians should supervise children’s use of the App and device.</li>
+      </ul>
+    </section>
+
+    <section class="card" id="prohibited">
+      <h2>8) Prohibited Conduct</h2>
+      <ul>
+        <li>Reverse engineering, copying, reselling, or creating derivative works of the App except as permitted by law.</li>
+        <li>Interfering with ad delivery, rewarded flows, or payment mechanisms.</li>
+        <li>Using automated tools or scraping without written permission.</li>
+        <li>Using the App to violate rights of others or any law/regulation.</li>
+      </ul>
+    </section>
+
+    <section class="card" id="third-parties">
+      <h2>9) Third‑Party Services &amp; Links</h2>
+      <p>The App integrates third‑party services (e.g., Google AdMob). Those services are governed by their own terms and privacy policies. We are not responsible for third‑party content, products, or services accessible via links in the App.</p>
+    </section>
+
+    <section class="card" id="ip">
+      <h2>10) Intellectual Property</h2>
+      <p>The App, its code, design, logos, and other materials are protected by intellectual property laws and are owned by Ays Labs or its licensors. Except for the limited license above, no rights are granted. All trademarks are the property of their respective owners.</p>
+    </section>
+
+    <section class="card" id="warranty">
+      <h2>11) Warranty Disclaimer</h2>
+      <p><strong>THE APP IS PROVIDED “AS IS” AND “AS AVAILABLE.”</strong> TO THE MAXIMUM EXTENT PERMITTED BY LAW, AYS LABS DISCLAIMS ALL WARRANTIES, EXPRESS OR IMPLIED, INCLUDING MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON‑INFRINGEMENT. WE DO NOT WARRANT THAT THE APP WILL BE ERROR‑FREE OR MEET YOUR REQUIREMENTS, OR THAT ANY PHOTO WILL BE ACCEPTED BY ANY AUTHORITY.</p>
+    </section>
+
+    <section class="card" id="liability">
+      <h2>12) Limitation of Liability</h2>
+      <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, AYS LABS WILL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, EXEMPLARY, OR PUNITIVE DAMAGES, OR ANY LOSS OF DATA, PROFITS, OR REVENUE, ARISING FROM OR RELATED TO YOUR USE OF THE APP. OUR TOTAL LIABILITY FOR ANY CLAIM WILL NOT EXCEED THE AMOUNT YOU PAID (IF ANY) FOR THE APP IN THE 12 MONTHS BEFORE THE CLAIM OR CAD $15, WHICHEVER IS LESS.</p>
+    </section>
+
+    <section class="card" id="indemnity">
+      <h2>13) Indemnity</h2>
+      <p>You agree to defend, indemnify, and hold harmless Ays Labs and its officers, directors, employees, and contractors from any claims, damages, liabilities, costs, and expenses (including reasonable legal fees) arising out of your use of the App, your content, or your violation of these Terms or any law.</p>
+    </section>
+
+    <section class="card" id="termination">
+      <h2>14) Suspension &amp; Termination</h2>
+      <p>We may suspend or terminate access to the App or particular features at any time, with or without notice, including where we believe you violated these Terms or to comply with law. Sections that by their nature should survive termination will survive.</p>
+    </section>
+
+    <section class="card" id="changes">
+      <h2>15) Changes to These Terms</h2>
+      <p>We may update these Terms to reflect App changes or legal requirements. We will update the “Effective” date above. Your continued use after changes means you accept the revised Terms.</p>
+    </section>
+
+    <section class="card" id="governing-law">
+      <h2>16) Governing Law &amp; Dispute Resolution</h2>
+      <p>These Terms are governed by the laws of the Province of Ontario and the laws of Canada applicable therein, without regard to conflict‑of‑law rules. You agree to the exclusive jurisdiction and venue of the courts located in Ontario, Canada.</p>
+    </section>
+
+    <section class="card" id="contact">
+      <h2>17) Contact</h2>
+      <p>Questions about these Terms? Email <a href="mailto:ayslabs.dev@gmail.com">ayslabs.dev@gmail.com</a>.</p>
+    </section>
+
+    <footer>
+      <p>&copy; <span id="y">2025</span> Ays Labs. All rights reserved.</p>
+    </footer>
+  </div>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
