--- a/terms.html
+++ b/terms.html
@@ -143,7 +143,7 @@
     <section class="card">
       <h2>11) Contact</h2>
       <p>Questions about these Terms? Email <a href="mailto:ayslabs.dev@gmail.com">ayslabs.dev@gmail.com</a>.</p>
-      <p>Privacy Policy: <a href="./index.html">index.html</a></p>
+      <p><a href="./index.html">Privacy Policy</a></p>
     </section>
 
     <footer>
